plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

springBoot {
	mainClass = 'com.ssafy.backend.BackendApplication'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

	implementation 'commons-codec:commons-codec:1.16.0'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.h2database:h2'

	implementation("org.springframework.boot:spring-boot-starter-webflux")
	implementation("com.fasterxml.jackson.core:jackson-annotations")

	implementation 'software.amazon.awssdk:s3:2.20.0'
	implementation 'software.amazon.awssdk:core:2.20.0'
	implementation 'software.amazon.awssdk:auth:2.20.0'
	implementation 'software.amazon.awssdk:regions:2.20.0'
	implementation 'software.amazon.awssdk:apache-client:2.20.0'

	//deep java library
	implementation 'ai.djl:api:0.25.0'
	implementation 'ai.djl.onnxruntime:onnxruntime-engine:0.25.0'
	implementation 'ai.djl.tensorflow:tensorflow-engine:0.25.0'

}

tasks.named('test') {
	useJUnitPlatform()
}

processResources {
}